# open-commerce-data-platform

./: .gitignore  LICENSE  PROJECT_CHARTER.md  README.md  ROADMAP.md
architecture/: PROJECT_CHARTER.md  README.md
architecture/decisions/: ADR-001-Adopt a Layered Data Platform Architecture.md  ADR-002-Preserve Immutable Raw Data.md  ADR-003-Adopt a Canonical Business Model.md  ADR-004-Publish Reusable Data Products.md
architecture/designs/: ingestion-framework.md
docs/business/: nova-commerce.md
ingestion/: pyproject.toml
ingestion/src/mercury_ingestion/: runner.py
ingestion/src/mercury_ingestion/common/: metadata.py  storage.py
ingestion/src/mercury_ingestion/connectors/: base.py  customers.py
ingestion/tests/: test_base_connector.py  test_customers.py  test_metadata.py  test_runner.py  test_storage.py
